--- a/src/about/css/Header.css
+++ b/src/about/css/Header.css
@@ -1,13 +1,14 @@
 .About-Header {
-  background-color: var(--Dark-Gray-100);
-  height: 70vh;
-  text-align: center;
+  background: url("../image/Header-Cover-Image.jpg") center center;
+  height: 80vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   margin-bottom: 6.25rem;
+  padding: var(--NavBar-Padding-TB) var(--NavBar-Padding-LR);
 }
+
 .Founder-Name {
   color: var(--Black);
   font-size: 3.3rem;
