--- a/src/AboutMe/css/AboutHeader.css
+++ b/src/AboutMe/css/AboutHeader.css
@@ -1,35 +1,45 @@
 .About-Header {
-  background: url("../image/About-Header-Cover-Image.jpg") center center;
-  height: 80vh;
+  background: url("../image/About-Header-Cover-Image.jpg");
+  background-repeat: repeat;
+  background-size: cover;
+  background-position: center;
+  height: 90vh;
+  margin-bottom: 6.25rem;
+}
+
+.About-Header-Overlay {
+  width: 100%;
+  height: 100%;
+  background-color: var(--Overlay-Light);
+  padding: var(--NavBar-Padding-TB) var(--NavBar-Padding-LR);
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   justify-content: center;
-  margin-bottom: 6.25rem;
-  padding: var(--NavBar-Padding-TB) var(--NavBar-Padding-LR);
 }
 
-.Founder-Name {
-  color: var(--Black);
-  font-size: 3.3rem;
-  font-family: "Product Sans Black" !important;
+.About-Yahaya-Picture-4-4 {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  overflow: hidden;
+  border: 4px solid var(--Dark-Gray-100);
+  background-image: url("./../image/About-Yahaya-Picture-4-4.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin-bottom: 20px;
 }
 
-.Header-Pre,
-.Header-Post {
-  color: var(--Dark-Gray-600);
-  font-size: 0.85rem;
+.About-Yahaya-Name {
+  color: var(--White);
+  font-size: 2.5rem;
+  font-family: "Open Sans Black" !important;
   text-transform: uppercase;
 }
 
-.Header-Pre {
-  font-weight: bold;
-  letter-spacing: 3px;
-  font-family: "Open Sans" !important;
-}
-
-.Header-Post {
-  font-weight: bold;
+.About-Yahaya-Profession {
+  color: var(--White);
+  font-size: 1.25rem;
   font-family: "Product Sans" !important;
-  letter-spacing: 1.5px;
 }
