--- a/src/assets/css/Xyshma-Defaults.css
+++ b/src/assets/css/Xyshma-Defaults.css
@@ -122,7 +122,7 @@ h6 {
   user-select: none;
   background-color: transparent;
   border: 1px solid transparent;
-  padding: 0.375rem 0.75rem;
+  padding: 0.375rem 32px;
   font-size: 1rem;
   line-height: 1.5;
   outline: none;
