Updated my skills to categorized tabbeb
Still working on it cause tab are not yet working, am about the use react best practice to access virtual DOM than to access actual DOM using vanilla js

--- a/src/assets/css/Xyshma-Colors.css
+++ b/src/assets/css/Xyshma-Colors.css
@@ -11,8 +11,9 @@
     YELLOW COLORS FAMILY 
     - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   */
-  --Yellow: #f3ab3f;
-  --Yellow-900: #ee991a;
+  --Yellow-Dim: #f3ab3f;
+  --Yellow: #ee991a;
+  --Yellow-Light: rgb(238, 153, 26, 0.3);
 
   /* 
     - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
