Updated File Structure

--- a/src/Pages/Home/css/Header.css
+++ b/src/Pages/Home/css/Header.css
@@ -1,63 +1,64 @@
 header.MainHeader {
-  height: 550px;
-  display: flex;
-  align-items: center;
-  background-color: rgba(234, 226, 183, 0.5);
-  padding: var(--NavBar-Padding-TB) var(--NavBar-Padding-LR);
-  margin-bottom: 50px;
+  height: 728px;
+  margin-bottom: 20px;
 }
 
-h2.Slogan {
-  font-size: 45px;
-  color: #003049;
+div.Header-Overlay {
+  display: flex;
+  align-items: center;
+  width: 100vw;
+  height: 728px;
+  background: linear-gradient(#003049, #000a0f);
+  padding: var(--NavBar-Padding-TB) var(--NavBar-Padding-LR);
+}
+
+p.Welcome-Msg {
+  color: var(--White);
+  text-transform: uppercase;
+  font-weight: 500;
+}
+
+h1.Slogan {
+  font-size: 60px;
+  color: var(--White);
   font-family: "Gotham Black" !important;
   line-height: 1.4;
   margin-bottom: 25px;
 }
 
 span.SloganMaker {
-  font-size: 45px;
+  font-size: 60px;
   font-family: "Gotham Black" !important;
   font-weight: bold;
-  color: #fcbf49;
+  color: var(--Orange);
 }
 
 p.Intro {
-  font-size: 16px;
-  color: #003049;
+  font-size: 18px;
+  color: var(--White);
   font-family: "Gotham" !important;
 }
 
 div.ButtonGroup button {
-  width: 150px;
+  width: auto;
   height: 50px;
+  padding-left: 2rem;
+  padding-right: 2rem;
   border: none;
   border-radius: 3px;
   outline: none;
-  /* font-weight: bold; */
+  font-weight: bold;
 }
 
 div.ButtonGroup button:first-child {
-  background-color: #fcbf49;
-  color: #fff;
+  background-color: var(--Orange);
+  color: var(--White);
   margin-right: 17px;
   box-shadow: 5px 3px 7px rgba(0, 48, 73, 0.1);
 }
 
 div.ButtonGroup button:first-child:hover {
-  background-color: #fcbf49;
-}
-
-div.ButtonGroup button:last-child {
-  background-color: transparent;
-  border: 1px solid #fcbf49;
-  color: #fcbf49;
-  transition: all 0.3s ease-in;
-}
-
-div.ButtonGroup button:last-child:hover {
-  background-color: #fcbf49;
-  color: #fff;
+  background-color: var(--Orange);
 }
 
 @media (max-width: 800px) {
@@ -72,7 +73,7 @@ div.ButtonGroup button:last-child:hover {
     display: none;
   }
 
-  header.MainHeader {
+  div.Header-Overlay {
     padding: var(--NavBar-Padding-TB) calc(var(--NavBar-Padding-LR) / 2);
   }
 
