--- a/src/Components/Navbar/css/Navigation.css
+++ b/src/Components/Navbar/css/Navigation.css
@@ -1,11 +1,10 @@
 nav.NavBar {
-  position: relative;
+  position: absolute;
   top: 0;
   left: 0;
   right: 0;
   z-index: 9998;
-  background-color: var(--White);
-  border-bottom: 1px solid var(--Dark-Gray-100);
+  background-color: transparent;
 }
 
 div.NavBar-Container {
@@ -40,7 +39,7 @@ button.SideDrawer-Toggle {
 button.SideDrawer-Toggle > span {
   width: 1.875rem;
   height: 0.1875rem;
-  background-color: var(--Dark-Blue);
+  background-color: var(--White);
   display: block;
   margin-bottom: 0.3125rem;
 }
@@ -62,10 +61,9 @@ li.NavBar-Item {
 }
 
 a.NavBar-Link {
-  color: var(--Dark-Blue);
+  color: var(--White);
   text-decoration: none;
   font-size: 15px;
-  font-weight: 400;
 }
 
 @media (max-width: 767px) {
