--- a/src/Pages/Home/css/WhyUs.css
+++ b/src/Pages/Home/css/WhyUs.css
@@ -1,79 +1,13 @@
-div.item > span,
-div.item > a,
-div.item > a:hover {
-  display: inline-block;
-  text-decoration: none;
-  color: inherit;
+div.Why-Us {
+  height: 525px;
+  margin: auto;
+  border-radius: 25px;
+  padding: 40px;
 }
 
-.section-head {
-  margin-bottom: 60px;
-}
-.section-head h2 {
-  font-size: 2.8125rem;
-  color: #003049;
+h1.Why-Us-Header {
+  font-size: 45px;
   font-family: "Gotham Black";
-  line-height: 1.4;
-  margin-bottom: 2.125rem;
+  color: var(--Orange);
   text-align: center;
-}
-
-.section-head p {
-  color: #003049;
-  line-height: 28px;
-  text-align: center;
-}
-
-.item {
-  background: #fff;
-  text-align: center;
-  padding: 30px 25px;
-  border-radius: 10px;
-  border: 2px solid rgba(234, 226, 183, 0.3);
-  margin-bottom: 30px;
-}
-
-.item .icon {
-  font-size: 40px;
-  margin-bottom: 25px;
-  color: var(--Dark-Blue);
-  width: 90px;
-  height: 90px;
-  line-height: 96px;
-  border-radius: 50px;
-}
-
-.item .feature_box_col_one {
-  background: rgba(252, 191, 73, 0.2);
-  color: var(--Red);
-}
-.item .feature_box_col_two {
-  background: rgba(252, 191, 73, 0.2);
-  color: var(--Red);
-}
-.item .feature_box_col_three {
-  background: rgba(252, 191, 73, 0.2);
-  color: var(--Red);
-}
-.item .feature_box_col_four {
-  background: rgba(252, 191, 73, 0.2);
-  color: var(--Red);
-}
-.item .feature_box_col_five {
-  background: rgba(252, 191, 73, 0.2);
-  color: var(--Red);
-}
-.item .feature_box_col_six {
-  background: rgba(252, 191, 73, 0.2);
-  color: var(--Red);
-}
-.item p {
-  font-size: 15px;
-  line-height: 26px;
-  color: var(--Dark-Blue);
-}
-.item h6 {
-  margin-bottom: 20px;
-  color: var(--Dark-Blue);
-  font-weight: bold;
 }
