--- a/src/Pages/Home/css/Mission.css
+++ b/src/Pages/Home/css/Mission.css
@@ -1,7 +1,9 @@
 section.Mission {
-  width: 100vw;
-  background-color: rgba(234, 226, 183, 0.5);
-  padding: 3.5rem 0;
+  margin-bottom: 70px;
+}
+
+div.Container {
+  padding: 3.5rem;
 }
 
 section.Mission h2 {
