--- a/src/assets/css/Xyshma-Defaults.css
+++ b/src/assets/css/Xyshma-Defaults.css
@@ -4,13 +4,9 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Gotham", -apple-system, BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Canterell","Fira Sans","Droid Sans", "Helvetica Neue", sans-serif;
-  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.005);
-  text-rendering: optimizeLegibility !important;
-  -webkit-font-smoothing: antialiased !important;
-  -moz-osx-font-smoothing: antialiased !important;
-  font-smoothing: antialiased !important;
-  
+  font-family: "Gotham", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+    "Oxygen", "Ubuntu", "Canterell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
 }
 
 html {
