--- a/src/Pages/Home/css/WhyUs.css
+++ b/src/Pages/Home/css/WhyUs.css
@@ -33,9 +33,9 @@ div.ReasonsToChooseUs div.Reason::before {
 }
 
 /* 
-
+***************************************
   MEDIA QUERY
-
+***************************************
 */
 
 @media (max-width: 768px) {
